Fixing left alignment on authenticated pages

--- a/admin/app/assets/stylesheets/govuk-template.scss
+++ b/admin/app/assets/stylesheets/govuk-template.scss
@@ -32,25 +32,6 @@
   }
 }
 
-#global-header-bar,
-#global-cookie-message p {
-  max-width: 960px;
-  margin: 0;
-}
-
-@media (min-width: 641px) {
-  #global-header-bar,
-  #global-cookie-message p {
-    margin: 0 30px;
-  }
-}
-@media (min-width: 1020px) {
-  #global-header-bar,
-  #global-cookie-message p {
-    margin: 0 auto;
-  }
-}
-
 #global-header .header-wrapper:after,
 #global-header .header-wrapper .header-global:after,
 #global-header .header-wrapper .header-global .header-logo:after,
@@ -102,6 +83,45 @@ div#global-cookie-message {
   width: initial;
 }
 
+#global-header-bar {
+  margin: 0;
+  height: 6px;
+  width: 100%;
+  max-width: 100%;
+  background-color: #005ea5;
+
+  @media (min-width: 641px) {
+    margin: 0 30px;
+  }
+  @media (min-width: 1020px) {
+    margin: 0 auto;
+  }
+}
+
+#global-cookie-message p {
+  font-weight: 400;
+  text-transform: none;
+  font-size: 14px;
+  line-height: 1.14286;
+  margin: 0;
+  max-width: 1020px;
+  margin: 0 0.5rem;
+
+  @media (min-width: 641px) {
+    font-size: 16px;
+    line-height: 1.25;
+  }
+
+  @media (min-width: 769px) {
+    margin-left: 2rem;
+  }
+
+  @media (min-width: 1020px) {
+    margin: 0 auto;
+    max-width: 950px;
+  }
+}
+
 .product-page-intro h1 {
   font-size: 3rem;
 
@@ -144,6 +164,14 @@ main {
   display: block;
 }
 
+#content,
+.global-cookie-message p,
+.breadcrumbs,
+.product-page-intro-wrapper,
+.product-page-section {
+  max-width: 1020px;
+}
+
 main .product-page-section {
   margin: 3rem 1.5rem;
 
@@ -172,17 +200,40 @@ main .product-page-section .grid-row {
   }
 }
 
-#content main .grid-row {
+#content .navigation-service,
+#content main:not(.column-three-quarters) {
   padding: 0 1.5rem;
   margin-right: 0;
 
   @media (min-width: 641px) {
     margin: 0;
-    padding: 0;
+    padding: 0 1.5rem;
   }
 
   @media (min-width: 769px) {
     margin-left: 2rem;
+  }
+}
+
+#content .navigation-service {
+  padding-top: 2rem;
+}
+
+.au-navigation {
+  @media (min-width: 641px) {
+    padding-right: 0;
+  }
+
+  @media (min-width: 769px) {
+    margin-left: 2.5rem;
+  }
+}
+
+#content div.grid-row main.column-three-quarters {
+  margin: 0 1.5rem;
+
+  @media (min-width: 641px) {
+    margin: 0;
   }
 }
 
@@ -482,7 +533,7 @@ button:focus {
 
 #global-header .header-wrapper {
   background-color: #313131;
-  max-width: 990px;
+  max-width: 1050px;
   margin: 0 1.5rem;
   padding-bottom: 8px;
   padding: 1rem 0 0.5rem 0;
@@ -859,14 +910,6 @@ button:focus {
   display: block;
 }
 
-/* Global header bar */
-#global-header-bar {
-  height: 6px;
-  width: 100%;
-  max-width: 100%;
-  background-color: #005ea5;
-}
-
 /* Global cookie message */
 .js-enabled #global-cookie-message {
   display: none;
@@ -879,21 +922,6 @@ button:focus {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-#global-cookie-message p {
-  // font-family: 'nta', Arial, sans-serif;
-  font-weight: 400;
-  text-transform: none;
-  font-size: 14px;
-  line-height: 1.14286;
-  margin-top: 0;
-  margin-bottom: 0;
-}
-@media (min-width: 641px) {
-  #global-cookie-message p {
-    font-size: 16px;
-    line-height: 1.25;
-  }
-}
 
 /* Global footer */
 #footer {
@@ -902,7 +930,7 @@ button:focus {
   border-top: 1px solid #a1acb2;
 }
 #footer .footer-wrapper {
-  max-width: 960px;
+  max-width: 1020px;
   margin: 0;
   padding-top: 20px;
 
@@ -930,7 +958,7 @@ button:focus {
   }
 
   @media (min-width: 769px) {
-    padding-left: 2rem;
+    margin-left: 0.5rem;
   }
 }
 
